media/mtransport/nriceresolver.h
@@ -71,6 +71,10 @@ class NrIceResolver
   void DestroyResolver();
   NS_INLINE_DECL_THREADSAFE_REFCOUNTING(NrIceResolver)
 
+  int resolve(nr_resolver_resource *resource,
+              int (*cb)(void *cb_arg, nr_transport_addr *addr),
+              void *cb_arg, void **handle);
+
  private:
   // Implementations of vtbl functions
   static int destroy(void **objp);
@@ -79,10 +83,6 @@ class NrIceResolver
                      void *cb_arg, void **handle);
   static void resolve_cb(NR_SOCKET s, int how, void *cb_arg);
   static int cancel(void *obj, void *handle);
-
-  int resolve(nr_resolver_resource *resource,
-              int (*cb)(void *cb_arg, nr_transport_addr *addr),
-              void *cb_arg, void **handle);
 
   class PendingResolution : public nsIDNSListener
   {
