media/mtransport/third_party/nICEr/src/net/nr_resolver.h
@@ -42,7 +42,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #define NR_RESOLVE_PROTOCOL_TURN 2
 
 typedef struct nr_resolver_resource_ {
-  char *domain_name;
+  const char *domain_name;
   UINT2 port;
   int stun_turn;
   UCHAR transport_protocol;
